--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [[bin]] # Bin to run the HelloWorld gRPC server
 name = "server"
-path = "src/server.rs"
+path = "src/main.rs"
 
 [[bin]] # Bin to run the HelloWorld gRPC client
 name = "cli"
