--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -22,11 +22,11 @@ log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = "0.4"
-surrealdb = "1.0.0-beta.8"
 tonic = "0.8"
 prost = "0.11"
 clap = { version = "4.0", features = ["derive"] }
 thiserror = "1.0"
+nostr-sdk = "0.16"
 
 [build-dependencies]
 tonic-build = "0.8"
