--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -29,7 +29,7 @@ clap = { version = "4.0", features = ["derive"] }
 thiserror = "1.0"
 secp256k1 = { version = "0.26" , features = ["rand-std", "bitcoin-hashes", "global-context"]}
 sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
-anyhow = "1.0"
+anyhow = { version = "1.0", features = [] }
 
 [build-dependencies]
 tonic-build = "0.8"
