--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -12,6 +12,7 @@ name = "cli"
 path = "src/client.rs"
 
 [dependencies]
+actix-web = "4"
 async-trait = "0.1"
 tokio = { version = "1.19", features = [ "full" ] }
 rust_decimal = "1.25"
@@ -23,14 +24,8 @@ log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = "0.4"
-tonic = "0.8"
-prost = "0.11"
-clap = { version = "4.0", features = ["derive"] }
+clap = { version = "4.1", features = ["derive"] }
 thiserror = "1.0"
 secp256k1 = { version = "0.26" , features = ["rand-std", "bitcoin-hashes", "global-context"]}
 sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
 anyhow = { version = "1.0", features = [] }
-
-[build-dependencies]
-tonic-build = "0.8"
-
