--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ name = "cli"
 path = "src/client.rs"
 
 [dependencies]
-actix-web = "4"
+axum = "0.6"
 async-trait = "0.1"
 tokio = { version = "1", features = [ "full" ] }
 rust_decimal = "1"
@@ -29,3 +29,5 @@ thiserror = "1"
 secp256k1 = { version = "0.27" , features = ["rand-std", "bitcoin-hashes", "global-context"]}
 sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite" ] }
 anyhow = { version = "1.0", features = [] }
+tower = "0.4"
+axum-macros = "0.3"
