--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,4 @@ sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite" ] }
 anyhow = { version = "1.0", features = [] }
 tower = "0.4"
 axum-macros = "0.3"
+reqwest = { version = "0.11", features = ["json"]}
