--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ serde_json = "1.0"
 chrono = "0.4"
 clap = { version = "4", features = ["derive"] }
 thiserror = "1"
-secp256k1 = { version = "0.27" , features = ["rand-std", "bitcoin-hashes", "global-context"]}
+secp256k1 = { version = "0.27" , features = ["rand-std", "bitcoin-hashes", "global-context", "serde"]}
 sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite" ] }
 anyhow = { version = "1.0", features = [] }
 tower = "0.4"
