--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ json = "0.12"
 log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"]}
 clap = { version = "4", features = ["derive"] }
 thiserror = "1"
 secp256k1 = { version = "0.27" , features = ["rand-std", "bitcoin-hashes", "global-context", "serde"]}
