--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ chrono = { version = "0.4", features = ["serde"], optional = true}
 clap = { version = "4", features = ["derive"], optional = true }
 thiserror = {version = "1", optional = true}
 secp256k1 = { version = "0.27" , features = ["rand-std", "bitcoin-hashes", "global-context", "serde"], optional = true}
-sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite" ], optional = true }
+sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite", "chrono"], optional = true }
 anyhow = { version = "1.0", features = [], optional = true }
 tower = {version = "0.4", optional = true}
 axum-macros = {version = "0.3", optional = true}
