--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite", "chrono
 anyhow = { version = "1.0", features = [], optional = true }
 tower = {version = "0.4", optional = true}
 axum-macros = {version = "0.3", optional = true}
-reqwest = { version = "0.11", features = ["json"], optional = true}
+reqwest = { version = "0.11", features = ["json", "blocking"], optional = true}
 
 [features]
 default = ["dep:axum", "dep:async-trait", "dep:tokio", "dep:rust_decimal", "dep:rust_decimal_macros",
@@ -39,3 +39,4 @@ default = ["dep:axum", "dep:async-trait", "dep:tokio", "dep:rust_decimal", "dep:
 "dep:chrono", "dep:clap", "dep:thiserror", "dep:secp256k1", "dep:sqlx", "dep:anyhow", "dep:tower", "dep:axum-macros", 
 "dep:reqwest"]
 client = ["dep:reqwest", "dep:chrono", "dep:serde", "dep:secp256k1", "dep:anyhow", "dep:log"]
+blocking = []
