--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,11 +32,12 @@ anyhow = { version = "1.0", features = [], optional = true }
 tower = {version = "0.4", optional = true}
 axum-macros = {version = "0.3", optional = true}
 reqwest = { version = "0.11", features = ["json", "blocking"], optional = true}
+config = { version = "0.13", optional = true}
 
 [features]
 default = ["dep:axum", "dep:async-trait", "dep:tokio", "dep:rust_decimal", "dep:rust_decimal_macros",
 "dep:env_logger", "dep:futures-util", "dep:json", "dep:log", "dep:serde", "dep:serde_json", 
 "dep:chrono", "dep:clap", "dep:thiserror", "dep:secp256k1", "dep:sqlx", "dep:anyhow", "dep:tower", "dep:axum-macros", 
-"dep:reqwest"]
+"dep:reqwest", "dep:config"]
 client = ["dep:reqwest", "dep:chrono", "dep:serde", "dep:secp256k1", "dep:anyhow", "dep:log"]
 blocking = []
