--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,12 +22,12 @@ futures-util = { version = "0.3", default-features = false, features = ["std"] ,
 json = {version = "0.12", optional = true}
 log = {version = "0.4", optional = true}
 serde = { version = "1.0", features = ["derive"] , optional = true}
-serde_json = {version = "1.0", optional = true}
+serde_json = {version = "1.0", features = ["raw_value"], optional = true}
 chrono = { version = "0.4", features = ["serde"], optional = true}
 clap = { version = "4", features = ["derive"], optional = true }
 thiserror = {version = "1", optional = true}
 secp256k1 = { version = "0.27" , features = ["rand-std", "bitcoin-hashes", "global-context", "serde"], optional = true}
-sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite", "chrono"], optional = true }
+sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite", "chrono", "json"], optional = true }
 anyhow = { version = "1.0", features = [], optional = true }
 tower = {version = "0.4", optional = true}
 axum-macros = {version = "0.3", optional = true}
